packages/gstreamer/gst/gstevent.inc

/////////////////////////////////////////////////////////////
//                                                         //
//   WARNUNG, dies Datei wird automatisch durch            //
//   das Program "Convert_Unit_to_pas_includes" erzeugt !  //
//   Erzeugt am: 20-09-2024   15:33                        //
//                                                         //
/////////////////////////////////////////////////////////////

{$IFDEF read_interface}

type
  PGstEventTypeFlags = ^TGstEventTypeFlags;
  TGstEventTypeFlags = longint;

const
  GST_EVENT_TYPE_UPSTREAM = 1 shl 0;
  GST_EVENT_TYPE_DOWNSTREAM = 1 shl 1;
  GST_EVENT_TYPE_SERIALIZED = 1 shl 2;
  GST_EVENT_TYPE_STICKY = 1 shl 3;
  GST_EVENT_TYPE_STICKY_MULTI = 1 shl 4;

const
  GST_EVENT_NUM_SHIFT = 8;

const
  GST_EVENT_TYPE_BOTH = GST_EVENT_TYPE_UPSTREAM or GST_EVENT_TYPE_DOWNSTREAM;

type
  PGstEventType = ^TGstEventType;
  TGstEventType = longint;

const
  GST_EVENT_UNKNOWN = 0 shl (GST_EVENT_NUM_SHIFT or 0);
  GST_EVENT_FLUSH_START = 10 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_BOTH);
  GST_EVENT_FLUSH_STOP = 20 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_BOTH or GST_EVENT_TYPE_SERIALIZED);
  GST_EVENT_STREAM_START = 40 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED or GST_EVENT_TYPE_STICKY);
  GST_EVENT_CAPS = 50 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED or GST_EVENT_TYPE_STICKY);
  GST_EVENT_SEGMENT = 70 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED or GST_EVENT_TYPE_STICKY);
  GST_EVENT_STREAM_COLLECTION = 75 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED or GST_EVENT_TYPE_STICKY or GST_EVENT_TYPE_STICKY_MULTI);
  GST_EVENT_TAG = 80 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED or GST_EVENT_TYPE_STICKY or GST_EVENT_TYPE_STICKY_MULTI);
  GST_EVENT_BUFFERSIZE = 90 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED or GST_EVENT_TYPE_STICKY);
  GST_EVENT_SINK_MESSAGE = 100 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED or GST_EVENT_TYPE_STICKY or GST_EVENT_TYPE_STICKY_MULTI);
  GST_EVENT_STREAM_GROUP_DONE = 105 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED or GST_EVENT_TYPE_STICKY);
  GST_EVENT_EOS = 110 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED or GST_EVENT_TYPE_STICKY);
  GST_EVENT_TOC = 120 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED or GST_EVENT_TYPE_STICKY or GST_EVENT_TYPE_STICKY_MULTI);
  GST_EVENT_PROTECTION = 130 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED or GST_EVENT_TYPE_STICKY or GST_EVENT_TYPE_STICKY_MULTI);
  GST_EVENT_SEGMENT_DONE = 150 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED);
  GST_EVENT_GAP = 160 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED);
  GST_EVENT_INSTANT_RATE_CHANGE = 180 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_STICKY);
  GST_EVENT_QOS = 190 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_UPSTREAM);
  GST_EVENT_SEEK = 200 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_UPSTREAM);
  GST_EVENT_NAVIGATION = 210 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_UPSTREAM);
  GST_EVENT_LATENCY = 220 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_UPSTREAM);
  GST_EVENT_STEP = 230 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_UPSTREAM);
  GST_EVENT_RECONFIGURE = 240 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_UPSTREAM);
  GST_EVENT_TOC_SELECT = 250 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_UPSTREAM);
  GST_EVENT_SELECT_STREAMS = 260 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_UPSTREAM);
  GST_EVENT_INSTANT_RATE_SYNC_TIME = 261 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_UPSTREAM);
  GST_EVENT_CUSTOM_UPSTREAM = 270 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_UPSTREAM);
  GST_EVENT_CUSTOM_DOWNSTREAM = 280 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED);
  GST_EVENT_CUSTOM_DOWNSTREAM_OOB = 290 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_DOWNSTREAM);
  GST_EVENT_CUSTOM_DOWNSTREAM_STICKY = 300 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED or GST_EVENT_TYPE_STICKY or GST_EVENT_TYPE_STICKY_MULTI);
  GST_EVENT_CUSTOM_BOTH = 310 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_BOTH or GST_EVENT_TYPE_SERIALIZED);
  GST_EVENT_CUSTOM_BOTH_OOB = 320 shl (GST_EVENT_NUM_SHIFT or GST_EVENT_TYPE_BOTH);

  //GST_EVENT_UNKNOWN = GST_EVENT_MAKE_TYPE(0,0);
  //GST_EVENT_FLUSH_START = GST_EVENT_MAKE_TYPE(10,_FLAG(BOTH));
  //GST_EVENT_FLUSH_STOP = GST_EVENT_MAKE_TYPE(20,(_FLAG(BOTH)) or (_FLAG(SERIALIZED)));
  //GST_EVENT_STREAM_START = GST_EVENT_MAKE_TYPE(40,((_FLAG(DOWNSTREAM)) or (_FLAG(SERIALIZED))) or (_FLAG(STICKY)));
  //GST_EVENT_CAPS = GST_EVENT_MAKE_TYPE(50,((_FLAG(DOWNSTREAM)) or (_FLAG(SERIALIZED))) or (_FLAG(STICKY)));
  //GST_EVENT_SEGMENT = GST_EVENT_MAKE_TYPE(70,((_FLAG(DOWNSTREAM)) or (_FLAG(SERIALIZED))) or (_FLAG(STICKY)));
  //GST_EVENT_STREAM_COLLECTION = GST_EVENT_MAKE_TYPE(75,(((_FLAG(DOWNSTREAM)) or (_FLAG(SERIALIZED))) or (_FLAG(STICKY))) or (_FLAG(STICKY_MULTI)));
  //GST_EVENT_TAG = GST_EVENT_MAKE_TYPE(80,(((_FLAG(DOWNSTREAM)) or (_FLAG(SERIALIZED))) or (_FLAG(STICKY))) or (_FLAG(STICKY_MULTI)));
  //GST_EVENT_BUFFERSIZE = GST_EVENT_MAKE_TYPE(90,((_FLAG(DOWNSTREAM)) or (_FLAG(SERIALIZED))) or (_FLAG(STICKY)));
  //GST_EVENT_SINK_MESSAGE = GST_EVENT_MAKE_TYPE(100,(((_FLAG(DOWNSTREAM)) or (_FLAG(SERIALIZED))) or (_FLAG(STICKY))) or (_FLAG(STICKY_MULTI)));
  //GST_EVENT_STREAM_GROUP_DONE = GST_EVENT_MAKE_TYPE(105,((_FLAG(DOWNSTREAM)) or (_FLAG(SERIALIZED))) or (_FLAG(STICKY)));
  //GST_EVENT_EOS = GST_EVENT_MAKE_TYPE(110,((_FLAG(DOWNSTREAM)) or (_FLAG(SERIALIZED))) or (_FLAG(STICKY)));
  //GST_EVENT_TOC = GST_EVENT_MAKE_TYPE(120,(((_FLAG(DOWNSTREAM)) or (_FLAG(SERIALIZED))) or (_FLAG(STICKY))) or (_FLAG(STICKY_MULTI)));
  //GST_EVENT_PROTECTION = GST_EVENT_MAKE_TYPE(130,(((_FLAG(DOWNSTREAM)) or (_FLAG(SERIALIZED))) or (_FLAG(STICKY))) or (_FLAG(STICKY_MULTI)));
  //GST_EVENT_SEGMENT_DONE = GST_EVENT_MAKE_TYPE(150,(_FLAG(DOWNSTREAM)) or (_FLAG(SERIALIZED)));
  //GST_EVENT_GAP = GST_EVENT_MAKE_TYPE(160,(_FLAG(DOWNSTREAM)) or (_FLAG(SERIALIZED)));
  //GST_EVENT_INSTANT_RATE_CHANGE = GST_EVENT_MAKE_TYPE(180,(_FLAG(DOWNSTREAM)) or (_FLAG(STICKY)));
  //GST_EVENT_QOS = GST_EVENT_MAKE_TYPE(190,_FLAG(UPSTREAM));
  //GST_EVENT_SEEK = GST_EVENT_MAKE_TYPE(200,_FLAG(UPSTREAM));
  //GST_EVENT_NAVIGATION = GST_EVENT_MAKE_TYPE(210,_FLAG(UPSTREAM));
  //GST_EVENT_LATENCY = GST_EVENT_MAKE_TYPE(220,_FLAG(UPSTREAM));
  //GST_EVENT_STEP = GST_EVENT_MAKE_TYPE(230,_FLAG(UPSTREAM));
  //GST_EVENT_RECONFIGURE = GST_EVENT_MAKE_TYPE(240,_FLAG(UPSTREAM));
  //GST_EVENT_TOC_SELECT = GST_EVENT_MAKE_TYPE(250,_FLAG(UPSTREAM));
  //GST_EVENT_SELECT_STREAMS = GST_EVENT_MAKE_TYPE(260,_FLAG(UPSTREAM));
  //GST_EVENT_INSTANT_RATE_SYNC_TIME = GST_EVENT_MAKE_TYPE(261,_FLAG(UPSTREAM));
  //GST_EVENT_CUSTOM_UPSTREAM = GST_EVENT_MAKE_TYPE(270,_FLAG(UPSTREAM));
  //GST_EVENT_CUSTOM_DOWNSTREAM = GST_EVENT_MAKE_TYPE(280,(_FLAG(DOWNSTREAM)) or (_FLAG(SERIALIZED)));
  //GST_EVENT_CUSTOM_DOWNSTREAM_OOB = GST_EVENT_MAKE_TYPE(290,_FLAG(DOWNSTREAM));
  //GST_EVENT_CUSTOM_DOWNSTREAM_STICKY = GST_EVENT_MAKE_TYPE(300,(((_FLAG(DOWNSTREAM)) or (_FLAG(SERIALIZED))) or (_FLAG(STICKY))) or (_FLAG(STICKY_MULTI)));
  //GST_EVENT_CUSTOM_BOTH = GST_EVENT_MAKE_TYPE(310,(_FLAG(BOTH)) or (_FLAG(SERIALIZED)));
  //GST_EVENT_CUSTOM_BOTH_OOB = GST_EVENT_MAKE_TYPE(320,_FLAG(BOTH));


type
  PGstStreamFlags = ^TGstStreamFlags;
  TGstStreamFlags = longint;

const
  GST_STREAM_FLAG_NONE = 0;
  GST_STREAM_FLAG_SPARSE = 1 shl 0;
  GST_STREAM_FLAG_SELECT = 1 shl 1;
  GST_STREAM_FLAG_UNSELECT = 1 shl 2;

var
  _gst_event_type: TGType; cvar;external libgstreamer;

type
  TGstEvent = record
    mini_object: TGstMiniObject;
    _type: TGstEventType;
    timestamp: Tguint64;
    seqnum: Tguint32;
  end;
  PGstEvent = ^TGstEvent;
  PPGstEvent = ^PGstEvent;

function gst_event_replace(old_event: PPGstEvent; new_event: PGstEvent): Tgboolean; cdecl; external libgstreamer;
function gst_event_steal(old_event: PPGstEvent): PGstEvent; cdecl; external libgstreamer;
function gst_event_take(old_event: PPGstEvent; new_event: PGstEvent): Tgboolean; cdecl; external libgstreamer;

type
  PGstQOSType = ^TGstQOSType;
  TGstQOSType = longint;

const
  GST_QOS_TYPE_OVERFLOW = 0;
  GST_QOS_TYPE_UNDERFLOW = 1;
  GST_QOS_TYPE_THROTTLE = 2;

type
  PGstGapFlags = ^TGstGapFlags;
  TGstGapFlags = longint;

const
  GST_GAP_FLAG_MISSING_DATA = 1 shl 0;
